# diplom

./: .gitignore  CMakeLists.txt  README.md  package.xml
diagrams/src/: ClusterFrontiersGrid_BFS.puml  FilterFrontiers.puml  OctoMapValidityChecker.puml  PathPlanner_planPath.puml  PathPlanner_targetCallback.puml  applyMLSSmoothing_estimate_h.puml  best_front_timer.puml  buildVoxelGrid.puml  calculateUnknownVolumeRatio.puml  camera_publisher.puml  clusterFrontiersPCL.puml  clusteringFrontiers.puml  countNeighborsVoxelGrid.puml  findBestScoringCandidate.puml  findFrontiers.puml  findKNNSorted.puml  generate_reconstruction_grid.puml  imu_ekf.puml  isLocationValid.puml  load_ply.puml  main_filter.puml  msp.puml  msp_ekf_node_fillImuMsg.puml  msp_ekf_node_timer.puml  planningTimerCallback.puml  ror_filter.puml  safe_copy_mappoints.puml  save_map_pcl.puml  save_ply.puml  search_front_timer.puml  tcp_receive.puml  tcp_send.puml  teleop.puml  tracking_points_new.puml  tracking_points_old.puml
include/diplom/: imu_ekf.h  msp_ekf_node.h  msp_protocol.h  pointcloud_utils.h  tcp_transmitter.h
launch/: data_from_sim.launch  frontier_server.launch  full_search.launch  octomap.launch  pcd_filter.launch  pid.launch  ply_filter.launch  ply_mls.launch
scripts/: teleop_example.py  test_pid.py
scripts/inavmspapi/: __init__.py  transmitter.py
src/: camera_publisher.cpp  frontier_detector_node.cpp  imu_ekf.cpp  main.cpp  msp_ekf_node.cpp  msp_protocol.cpp  path_planner_node.cpp  pcd_filter_node.cpp  ply_filter_node.cpp  ply_mls_node.cpp  pointcloud_utils.cpp  target_selector_node.cpp  tcp_transmitter.cpp  teleop.cpp
