<?xml version="1.0"?>
<package format="2">
  <name>diplom</name>
  <version>0.0.0</version>
  <description>The diplom package</description>
  <maintainer email="prostagma@todo.todo">prostagma</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Core & Common Msgs -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend> 

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Image Processing -->
  <depend>image_transport</depend>
  <depend>cv_bridge</depend> 

  <!-- OctoMap -->
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>

  <!-- System Libraries -->
  <depend>eigen</depend>
  <depend>octomap</depend> 


  <export>
  </export>
</package>